--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -8,26 +8,32 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-trophy"></i> Film Awards</div>
                         <div class="listClass">
                             <li>Best Picture</li>
                             <li>Best Director</li>
+                            <li>Best Actor</li>
+                            <li>Best Actress</li>
+                            <hr>
                             <li>Best Sound</li>
                             <li>Best Music Score</li>
                             <li>Best Editing</li>
-                            <li>Best Stunts/Special Effects/Artistic Appeal</li>
-                            <li>Best Actor</li>
-                            <li>Best Actress</li>
-                            <li>Best Supporting Actor</li>
-                            <li>Best Supporting Actress</li>
-                            <li>Best performance by a Child</li>
-                            <li>Best film of each genre</li>
+                            <li>Best Cinematics (Stunts/Special Effects/Artistic Appeal)</li>
+                            <li>Best Supporting Performance</li>
+                            <li>Best Performance by a Child</li>
+                            <hr>
+                            <li>Best Comedy</li>
+                            <li>Best Documentary</li>
+                            <li>Best Drama</li>
+                            <li>Best Horror</li>
+                            <li>Best Music Video</li>
+                            <li>Best Sci-Fi</li>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-list-alt"></i> Genres</div>
                         <div class="listClass">
@@ -38,7 +44,16 @@
                             <li>Music Video</li>
                             <li>Sci-Fi</li>
                             <li>Other</li>
-                         </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="borderClass">
+                        <div class="titleCLass"><i class="fa fa-file-text"></i> Script Awards</div>
+                        <div class="listClass">
+                            <li>Best Screenplay - Produced</li>
+                            <li>Best Screenplay - Unproduced</li>
+                        </div>
                     </div>
                 </div>
             </div>
