--- a/src/app/bottom-bar/bottom-bar.component.html
+++ b/src/app/bottom-bar/bottom-bar.component.html
@@ -1,15 +1,16 @@
 <div style="background-color: black; color: gray; white-space: nowrap; overflow: hidden;">
-    &copy; 2020 Snohomish Film Festival | 
-    <span [routerLink]="['/contact']" class="wordLink">Contact</span>
+    <span [routerLink]="['']" class="wordLink">&copy; 2020 Snohomish Film Festival</span> |
+    <span [routerLink]="['/contact']" class="wordLink">Contact</span> |
+    <a href="https://filmfreeway.com/SnohomishFilmFestival" class="wordLink">Film Freeway</a>
 </div>
 <div>Sponsors</div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-6">
-            <a href="https://www.stolthetaquavit.com/" target=_new><img src="assets/graphics/sponsors/stolthet538.jpg" class="image"></a>
+            <a href="https://www.stolthetaquavit.com/" target=_new><img src="assets/graphics/sponsors/stolthet538.jpg" class="imageSponsor"></a>
         </div>
         <div class="col-sm-6">
-            <a href="http://www.superpowersgame.com/superpowers/#/" target=_new><img src="assets/graphics/sponsors/superpowers538.jpg" class="image"></a>
+            <a href="http://www.superpowersgame.com/superpowers/#/" target=_new><img src="assets/graphics/sponsors/superpowers538.jpg" class="imageSponsor"></a>
         </div>
     </div>
 </div>
