--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-user"></i> Help Wanted</div>
-                        We are looking for people to help run the festival and judge movies. Contact us if you are interested in helping out!
+                        We are looking for volunteers to help run the festival and judge movies. Contact us if you are interested in helping out!
                     </div>
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-user"></i> Festival Contacts</div>
