--- a/src/app/festival-program/festival-program.component.html
+++ b/src/app/festival-program/festival-program.component.html
@@ -48,7 +48,7 @@
             </tr>
 
             <tr>
-                <td colspan="4" style="background-color: #ccccff;">5pm hour features local Snohomish County Films</td>
+                <td colspan="4" style="background-color: #ccccff;">5pm hour features Washington State Films</td>
             </tr>
             <tr>
                 <td>5pm</td>
