--- a/src/app/guild/guild.component.html
+++ b/src/app/guild/guild.component.html
@@ -41,6 +41,8 @@
                             <li>Guaranteed feedback with every film submitted.</li>
                             <li>Free entry into our film database.</li>
                         </ol>
+                        <hr>
+                        Visit <a href="https://filmfreeway.com/SnohomishFilmFestival">Film Freeway</a> to conduct reviews. Email Rick if you do not have review access by October 1st.
                     </div>
                 </div>
             </div>
