--- a/src/app/bottom-bar/bottom-bar.component.scss
+++ b/src/app/bottom-bar/bottom-bar.component.scss
@@ -11,3 +11,13 @@
     font-weight: 800;
     color: white;
 }
+.imageSponsor {
+    width: 100%;
+    border: 1px solid black; 
+    border-radius: 5px;
+    margin: 2px; 
+    box-shadow: 3px 3px 5px #444;
+}
+.imageSponsor:hover {
+    border: 1px solid white; 
+}
