--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,4 +1,5 @@
-<app-page-shell [userId]="userId" [lButton]="'info'" [rButton]="'brush'" [navTitle]="'Main Menu'" [icon]="'fa-bars'" (messageEvent)="buttonClicked ($event)">
+<app-page-shell [userId]="userId" [lButton]="'info'" [rButton]="'brush'" [navTitle]="'Main Menu'" [icon]="'fa-bars'"
+    (messageEvent)="buttonClicked ($event)">
 
     <img src="assets/graphics/film1.jpg" class="image">
     <app-button-bar [buttonIdx]="0"></app-button-bar>
@@ -6,10 +7,6 @@
         <img src="assets/graphics/logo.png" style="width: 100%; max-width: 600px;" title="Snohomish Film Festival">
         <div style="font-weight: 700; font-size: 16px;">Featuring Short Films</div>
         <div style="font-size: 32px;">September 18, 2021</div>
-        <div>
-            Snohomish Film Festival is your chance to see local, award-winning films, along with the
-            cast and crews that created them!
-        </div>
     </div>
 
 
@@ -19,9 +16,18 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass">Submit Your Projects!</div>
-                        We start accepting films on October 1, 2020. Early bird special just $15 to submit your project. Guaranteed feedback from multiple industry insiders for all submitted films, whether your project is featured or not.
+                        We start accepting short films and scripts on October 1, 2020. Early bird special just $15 to
+                        submit your project. Guaranteed feedback from multiple industry insiders for all submitted
+                        films, whether your project is featured or not.
                         <div style="font-size: 32px; text-align: center;"></div>
                         <div style="text-align: center; padding: 10px;">
+
+                            <a href="https://filmfreeway.com/festivals/56426?utm_campaign=Snohomish+Film+Festival&utm_medium=External&utm_source=Submission+Button"
+                                target="_blank" title="Click to submit on FilmFreeway"><img
+                                    src="https://storage.googleapis.com/filmfreeway-assets/submission_buttons/v2/sm_submission_btn@2x-sky-gradient.png"
+                                    title="Click to submit on FilmFreeway" width="263" height="49"></a>
+
+                            <hr>
                             <app-button [routerLink]="['/submit']" [name]="'More Info'"></app-button>
                         </div>
                     </div>
@@ -29,13 +35,19 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass">Event Details</div>
-                        <div>This event will be September 18, 2021, giving local film makers a chance to show off your work!</div>
-                        
-                        <div style="text-align: center; padding: 10px;">
-                            <app-button [routerLink]="['/tickets']" [name]="'More Info'"></app-button>
-                            <app-button [routerLink]="['/contact']" [name]="'Contact Us'"></app-button>
+                        <div style="text-align: center; border: 1px solid gray; margin: 10px; padding: 10px;">
+                            <div>September 18, 2021</div>
+                            <div>3pm-8pm</div>
+                            <div>Everett Performing Arts Center</div>
                         </div>
-                     </div>
+                        <div>Snohomish Film Festival is your chance to see local, award-winning films, along with the
+                            cast and crews that created them! </div>
+                            <hr>
+                        <div style="text-align: center; padding: 10px;">
+                            <app-button [routerLink]="['/contact']" [name]="'Contact Us'"></app-button>
+                            <app-button [routerLink]="['/tickets']" [name]="'More Info'"></app-button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
