--- a/src/app/guild/guild.component.html
+++ b/src/app/guild/guild.component.html
@@ -14,6 +14,11 @@
                         <p>
                             Welcome to the Snohomish Film Festival Guild!
                         </p>
+                        <p>
+                            Thank you to everyone who is helping out. This is an all-volunteer project meant to help
+                            promote and enrich the Washington State independent film industry. Your help is greatly
+                            appreciated.
+                        </p>
                         <div style="text-align: center; font-size: 20px;">
                             <a [routerLink]="['/people']" [queryParams]="{buttonIdx: 5}">
                                 Guild Members
@@ -25,19 +30,18 @@
                         </p>
                         <ol>
                             <li [routerLink]="['/user']" [queryParams]="{id: userId}">Update your <b><u>profile</u></b>
-                                with a picture.</li>
-                            <li [routerLink]="['/user']" [queryParams]="{id: userId}">Update your <b><u>profile</u></b>
-                                with a short bio.</li>
-                            <li>Email <a href="mailto:rickmedved@hotmail.com">rickmedved@hotmail.com</a> for any
+                                with a picture and short bio.</li>
+                            <li>For any comments or questions, post to our <a
+                                    href="https://app.slack.com/client/T0194UP5J31/G01A9GPRJCQ">Slack</a> forum.</li>
+                            <li>Or email <a href="mailto:rickmedved@hotmail.com">rickmedved@hotmail.com</a> for
                                 questions.</li>
 
                         </ol>
                         <hr>
-                        <div>Tuesday
+                        <div>Next
                             <a
                                 href="https://us04web.zoom.us/j/79059264380?pwd=SG9VZ0hLMTBhMEZwVS9WQkVyektVUT09">Zoom</a>
-                            meeting</div>
-                        <div>7pm</div>
+                            meeting, Tuesday Nov 17th @7pm</div>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -47,11 +51,14 @@
                                 href="https://filmfreeway.com/SnohomishFilmFestival">Film Freeway</a> to conduct
                             reviews.</p>
                         <hr>
-                        <div><b>Tier 1:</b> Tier 1 Guild Members will watch as many films as
-                            they
-                            have time to watch and rate them in 5 categories, plus give feedback. The judging forms
-                            look
-                            like this:</div>
+                        <p><b>Tier 1:</b> Guild Members can watch as many or as few of the films as
+                            you
+                            have time to watch and rate them in 5 categories, plus give feedback.
+                        </p>
+                        <p>The judging
+                            forms look like this:</p>
+
+
                         <div style="border: 1px solid black; padding: 10px; margin: 10px;">
                             <div><b><u>Judging Form</u></b></div>
                             <ol>
@@ -71,7 +78,7 @@
                         <p>
                             The scores from all the scorecards will be tabulated and the top 40 films move on to tier 2.
                         </p>
-                        <p>
+                        <!--<p>
                             <b>Tier 2:</b> The submission process closes June 30th. Starting July 1st the Tier 2
                             team, which has not
                             seen any of the films, will watch the 40 films and decide which 30 make it into the
@@ -87,8 +94,8 @@
                             For each award category (Best Director, Best Sound, Best editing, etc) a
                             3-judge
                             panel will watch the 3 top movies selected for the award and vote on the winner. Note: Tier 3 judges are also Tier 1 guild members and may or may not have already seen the movies.
-                        </p>
-                   </div>
+                        </p>-->
+                    </div>
                 </div>
             </div>
         </div>
