--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -14,23 +14,37 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
+
+
+                    <div class="borderClass">
+                        <div class="titleCLass">Your help wanted!</div>
+                        We are looking for volunteers to help judge local films and assist in running the festival.
+                        <div style="font-size: 32px; text-align: center;"></div>
+                        <div style="text-align: center; padding: 10px;">
+                            <app-button [routerLink]="['/help-wanted']" [name]="'More Info'"></app-button>
+                        </div>
+                    </div>
+
                     <div class="borderClass">
                         <div class="titleCLass">Submit Your Projects!</div>
-                        We start accepting short films and scripts on October 1, 2020. Early bird special just $15 to
+                        We start accepting short films and scripts on October 1, 2020. 
+                        <!--Early bird special just $15 to
                         submit your project. Guaranteed feedback from multiple industry insiders for all submitted
-                        films, whether your project is featured or not.
+                        films, whether your project is featured or not.-->
                         <div style="font-size: 32px; text-align: center;"></div>
                         <div style="text-align: center; padding: 10px;">
 
-                            <a href="https://filmfreeway.com/festivals/56426?utm_campaign=Snohomish+Film+Festival&utm_medium=External&utm_source=Submission+Button"
+                           <!-- <a href="https://filmfreeway.com/festivals/56426?utm_campaign=Snohomish+Film+Festival&utm_medium=External&utm_source=Submission+Button"
                                 target="_blank" title="Click to submit on FilmFreeway"><img
                                     src="https://storage.googleapis.com/filmfreeway-assets/submission_buttons/v2/sm_submission_btn@2x-sky-gradient.png"
                                     title="Click to submit on FilmFreeway" width="263" height="49"></a>
 
-                            <hr>
+                            <hr>-->
                             <app-button [routerLink]="['/submit']" [name]="'More Info'"></app-button>
                         </div>
                     </div>
+
+
                 </div>
                 <div class="col-sm-6">
                     <div class="borderClass">
@@ -42,10 +56,9 @@
                         </div>
                         <div>Snohomish Film Festival is your chance to see local, award-winning films, along with the
                             cast and crews that created them! </div>
-                            <hr>
+                        <hr>
                         <div style="text-align: center; padding: 10px;">
-                            <app-button [routerLink]="['/contact']" [name]="'Contact Us'"></app-button>
-                            <app-button [routerLink]="['/tickets']" [name]="'More Info'"></app-button>
+                            <app-button [routerLink]="['/about']" [name]="'More Info'"></app-button>
                         </div>
                     </div>
                 </div>
